[package]
name = "gif_tube_desk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.45.1", features = ["full"]}
yt-dlp = {version = "1.3.4", features = ["tracing"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde     = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"
crossterm = "0.27"
tui = "0.19"
anyhow = "1.0"
sysinfo = "0.37.0"
